--- a/styles/_layout.scss
+++ b/styles/_layout.scss
@@ -5,14 +5,16 @@
 
 .subpage {
 	.content {
+		box-sizing: border-box;
 		display: flex;
 		line-height: 200%;
 		margin: 0 auto;
 		max-width: 650px;
-		padding: 8rem 0;
+		padding: 8rem 1rem 2rem;
 
 		@media only screen and (min-width: 996px) {
 			max-width: 100%;
+			padding: 8rem 0;
 		}
 
 		&__sidebar {
@@ -26,11 +28,12 @@
 
 		&__body {
 			flex: 9;
+			max-width: 100%;
 		}
 
 		h1 {
 			border-bottom: 1px solid #eee;
-			font-size: 1.5rem;
+			font-size: 2rem;
 			margin: 0;
 			padding: 0 0 1rem;
 		}
